public/css/footer.css
footer {
  width: 100%;
}

footer .conteudo {
  width: 75%;
  margin: 0 auto;
  display: flex;
  padding: 45px 45px 100px;
  max-width: 1400px;
}

footer .conteudo .newsletter {
  width: 35%;
  max-width: 500px;
  margin-right: 30px;
}

footer .conteudo .input-wrapper {
  background-color: #ffffff;
  max-width: 400px;
  border: 2px solid var(--cor-secundaria);
  margin-top: 20px;
}

footer .conteudo input {
  padding: 10px;
  border: none;
  width: 70%;
  color: var(--cor-texto-secundaria);
}

footer .conteudo input:focus {
  outline: none;
}

footer .conteudo button {
  width: 28%;
  border: none;
  background-color: #ffffff;
  font-family: var(--font-paragrafo);
  font-weight: bold;
  cursor: pointer;
}

footer .conteudo button:hover {
  opacity: 0.8;
}

footer .conteudo h3 {
  font-family: var(--font-titulo);
  font-size: 28px;
}

footer .conteudo .newsletter p {
  font-family: var(--font-paragrafo);
  margin-top: 10px;
}

footer nav {
  display: flex;
  justify-content: space-around;
  width: 60%;
  font-family: var(--font-paragrafo);
  font-size: 15px;
}

footer nav li {
  list-style: none;
  margin-bottom: 15px;
  color: var(--cor-texto-secundaria);
}

footer nav li a {
  text-decoration: none;
  color: var(--cor-texto-secundaria);
}

footer nav li.categoria-principal,
footer nav li.categoria-principal a {
  color: var(--cor-texto-primaria);
  margin-bottom: 20px;
}

footer nav li a:hover {
  color: var(--cor-secundaria);
}

footer .copyright {
  background-color: var(--cor-secundaria);
  text-align: center;
  padding: 10px;
}

footer .copyright p {
  color: var(--cor-texto-primaria);
  font-family: var(--font-paragrafo);
  font-size: 12px;
  font-weight: bold;
}

@media (max-width: 1120px) {
  footer .conteudo {
    width: 95%;
  }
}

@media (max-width: 880px) {
  footer .conteudo {
    flex-direction: column;
    align-items: center;
    width: 99%;
    padding: 45px 20px 60px;
  }

  footer .conteudo .newsletter {
    width: 100%;
    margin-bottom: 60px;
    text-align: center;
    margin-right: 0;
  }

  footer .conteudo nav {
    width: 100%;
  }

  footer .conteudo .input-wrapper {
    width: 100%;
    max-width: 100%;
  }
}

@media (max-width: 450px) {
  footer .conteudo nav {
    flex-direction: column;
    align-items: center;
    text-align: center;
  }

  footer .conteudo nav ul {
    margin-bottom: 30px;
  }
}

